CONN-363: Changed the codebase to use JDK 1.6