@@ -21,8 +21,8 @@
         <cobertura.check.haltOnFailure>false</cobertura.check.haltOnFailure>
         <cobertura.totalBranchRate>85</cobertura.totalBranchRate>
         <cobertura.totalLineRate>85</cobertura.totalLineRate>
-        <compiler.source>1.7</compiler.source>
-        <compiler.target>1.7</compiler.target>
+        <compiler.source>1.6</compiler.source>
+        <compiler.target>1.6</compiler.target>
     </properties>
     <modules>
         <module>build-tools</module>
@@ -398,6 +398,10 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>2.13</version>
+                <configuration>
+                    <argLine>-XX:MaxPermSize=1012m</argLine>
+                </configuration>
+                   
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
